--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <p>thi sis my second in github without making any filee</p>
+<p>this we new linne which im adding in branch2 to check some new commands in git and github</p>
